tests/invalid/bad_reg.s
_start:
  add r0, r20, r40
  